objects/Student_association__c.object
<CustomObject>
    <description>To help to store the student asociation and grades</description>
    <label>Student_association</label>
    <nameField>
        <label>Student_association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Student_Grade__c</fullName>
        <label>Student Grade</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Fee_details__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Student Fee details</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_roll_number__c</fullName>
        <description>To store roll number</description>
        <displayFormat>S-{00}</displayFormat>
        <label>Student_roll_number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Student_Dat_of_Birth__c</fullName>
        <label>Student Dat of Birth</label>
        <type>Date</type>
    </fields>
</CustomObject>